--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Зарегистрироваться</title>
+    <title>Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
       body, html {
@@ -34,18 +34,8 @@
         </div>
 
         <div class="mb-3">
-            <label for="user_group" class="form-label">Выберите группу</label>
-            <select class="form-select" aria-label="Default select example" name="user_group" id="user_group">
-                <option selected>Выберите группу</option>
-                {% for item in user_group %}
-                    <option value="{{item.id}}">{{item.name}}</option>
-                {% endfor %}
-            </select>
-        </div>
-
-        <div class="mb-3">
             <label for="user_group" class="form-label">Роль пользователя</label>
-            <select class="form-select" aria-label="Default select example" name="user_group" id="user_group">
+            <select class="form-select" multiple aria-label="Multiple select example" name="user_group" id="user_role">
                 <option selected>Роль пользователя</option>
                 {% for item in groups %}
                     <option value="{{item.id}}">{{item.name}}</option>
@@ -53,10 +43,38 @@
             </select>
         </div>
 
-        <button type="submit" class="btn btn-primary w-100">Зарегистрироваться</button>
+        <div class="mb-3">
+            <label for="group_selection" class="form-label">Выберите группу</label>
+            <select class="form-select" aria-label="Default select example" name="user_group" id="group_selection">
+                <option selected>Выберите группу</option>
+                {% for item in user_group %}
+                    <option value="{{item.id}}">{{item.name}}</option>
+                {% endfor %}
+            </select>
+        </div>
 
-        <a href="{% url 'login' %}" class="mt-3">Авторизоваться</a>
+        <button type="submit" class="btn btn-primary w-100">Submit</button>
     </form>
+
+    <script>
+      document.addEventListener('DOMContentLoaded', (event) => {
+        const userRoleSelect = document.getElementById('user_role');
+        const groupSelect = document.getElementById('group_selection');
+
+        userRoleSelect.addEventListener('change', function() {
+          let teacherSelected = false;
+
+          for (let option of userRoleSelect.options) {
+            if (option.selected && option.textContent.toLowerCase().includes('teacher')) {
+              teacherSelected = true;
+              break;
+            }
+          }
+
+          groupSelect.disabled = teacherSelected;
+        });
+      });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
