--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Register</title>
+    <title>Зарегистрироваться</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
       body, html {
@@ -18,6 +18,7 @@
   <body>
     
     <form class="border p-4 rounded" style="width: 400px;" method="post">
+      <h4 class="text-danger">{{error}}</h4>
         {% csrf_token %}
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Имя пользователя</label>
@@ -35,7 +36,7 @@
 
         <div class="mb-3">
             <label for="user_group" class="form-label">Роль пользователя</label>
-            <select class="form-select" multiple aria-label="Multiple select example" name="user_group" id="user_role">
+            <select class="form-select" multiple aria-label="Multiple select example" name="groups" id="user_role">
                 <option selected>Роль пользователя</option>
                 {% for item in groups %}
                     <option value="{{item.id}}">{{item.name}}</option>
@@ -53,7 +54,9 @@
             </select>
         </div>
 
-        <button type="submit" class="btn btn-primary w-100">Submit</button>
+        <button type="submit" class="btn btn-primary w-100">Зарегистрироваться</button>
+
+        <a href="{% url 'login' %}" class="mt-3">Авторизоваться</a>
     </form>
 
     <script>
