--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,10 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'module_teacher' %}">Модуль</a>
-              </li>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'lesson_teacher' %}">Уроки</a>
+                </li>
               </ul>
               <div class="d-flex">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
