--- a/templates/base.html
+++ b/templates/base.html
@@ -15,21 +15,32 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Домашняя страница</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'teacher_course' %}">Мои курсы</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'add_course' %}">Добавить курс</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'module_teacher' %}">Модуль</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'lesson_teacher' %}">Уроки</a>
-                </li>
+                {% for group in request.user.groups.all %}
+                  {% if group.name == 'student' %}
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Курсы</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'course_student' %}">Мои курсы</a>
+                  </li>
+                  {% else %}
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Домашняя страница</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="{% url 'teacher_course' %}">Мои курсы</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'add_course' %}">Добавить курс</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'module_teacher' %}">Модуль</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'lesson_teacher' %}">Уроки</a>
+                  </li>
+                  {% endif %}
+                {% endfor %}
               </ul>
               <div class="d-flex">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
